[tool.poetry]
name = "tiny-grocery-store"
version = "0.1.0"
description = ""
authors = ["Juliana Machado <jfcaiado@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.106.0"
flet = "^0.17.0"
ipython = "^8.19.0"
sqlalchemy = "^2.0.22"
blue = "^0.9.1"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
