[tool.poetry]
name = "tiny-grocery-store"
version = "0.1.0"
description = ""
authors = ["Juliana Machado <jfcaiado@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
flet = "^0.19.0"
blue = "^0.9.1"
sqlmodel = "^0.0.14"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gunicorn = {extras = ["standard"], version = "^21.2.0"}
pydantic-settings = "^2.1.0"
pytest = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^1.0.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
